1999-12-31  Andreas Jaeger  <aj@suse.de>

	* libio/strfile.h: Remove K&R compatibility.
	* locale/langinfo.h: Likewise.
	* locale/localeconv.c (localeconv): Likewise.
	* locale/programs/simple-hash.h: Likewise.
	* nis/nis_xdr.h: Likewise.
	* nis/rpcsvc/nislib.h: Likewise.
	* nis/rpcsvc/nis_callback.h: Likewise.
	* nis/rpcsvc/nis.h: Likewise.
	* nis/ypclnt.c: Likewise.
	* nscd/nscd_proto.h: Likewise.
	* nscd/nscd.c: Likewise.
	* sysdeps/generic/inttypes.h: Likewise.
	* sysdeps/gnu/utmpx.h: Likewise.

	* nis/nis_intern.h: Remove K&R compatibility; add missing ints.
	* sunrpc/rpcsvc/rusers.x: Likewise.

	* nis/rpcsvc/ypclnt.h: Remove K&R compatibility; reformat.

	* elf/dl-misc.c: Remove __libc_write prototype since it's already
	in include/unistd.h.
	* elf/dl-profile.c: Likewise.
	* elf/dl-load.c: Likewise for __libc_read.

	* elf/dl-profile.c: Remove __P.
	* elf/sprof.c: Likewise.
	* elf/sln.c: Likewise.

1999-12-31  Ulrich Drepper  <drepper@cygnus.com>

	* locale/langinfo.h: Add constants for wide character collation
	symbol table.
	* locale/categories.def: Add appropriate entries for collate symbol
	table entries.
	* locale/C-collate.c: Add initializers for new entries.
	Remove commented out code.
	* locale/elem-hash.h: New file.
	* locale/Makefile (distribute): Add elem-hash.h.
	* locale/programs/ld-collate.c: Implement output of collate symbol
	table.

	* posix/regex.c: Implement collation class handling.

1999-12-30  Ulrich Drepper  <drepper@cygnus.com>

	* posix/regex.c (regex_compile): Implement equivalence class handling.

1999-12-30  Geoffrey Keating  <geoffk@cygnus.com>

	* sysdeps/powerpc/dl-machine.c: Many minor formatting changes.
	(OPCODE_LWZU): New macro.
	(OPCODE_ADDIS_HI): New macro.
	(OPCODE_LIS_HI): New macro.
	(__elf_machine_runtime_setup): Change PLT code-generation scheme
	for thread safety even with very large PLTs, better efficiency,
	and to fix a cache-flushing bug.  Also support the Motorola